Полный  рефакторинг проекта